A20 Z20, Übergabe Punkte, 22 WR, Wertung einlesen Anpassung, Fix Disqualifikation, Stichrunde fix

--- a/views/EWS3.css
+++ b/views/EWS3.css
@@ -1,4 +1,4 @@
-﻿/*   Version V3.2019  */
+﻿/*   Version V3.2020  */
 .runden             { vertical-align:middle; text-align:center; background-color:#FFA; height:40px; }
 .kopf_1             { font-family: Arial; vertical-align:middle; text-align:center; font-size:1.4em; font-weight:bold; }
 .rd_o               { font-family: Arial; font-size:24px; vertical-align:middle; text-align:left;  color:#000; background-color:#CDC;  padding-left:10px; width:900px; }
@@ -33,7 +33,7 @@
 .mistakes           { box-sizing: border-box; text-align:left; }
 .mistakes div       { display: inline-block; margin-right: 0.25em; vertical-align: middle; }
 .btn-warning        { font-family: Arial; font-size:14px; color: #fff; background-color: #fa4; border-color: #fa3; padding:3px; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px;}
-.btn-attention      { font-family: Arial; font-size:14px; color: #fff; background-color: #5cf; border-color: #5cf; padding:3px; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px;}
+.btn-attention      { font-family: Arial; font-size:14px; color: #fff; background-color: #58f; border-color: #58f; padding:3px; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px;}
 .btn-danger         { font-family: Arial; font-size:14px; color: #fff; background-color: #d55 ;border-color: #d44; }
 .obsbuttons         { font-family: Arial; font-size:14px; color: #fff; background-color: #fa4; border-color: #fa3; text-align:center; padding:3px; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px;}
 .mistakes-list      { margin-bottom: 0.2em; padding: 0.2em; text-align: left; min-width: 5em; border: 1px solid #000; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; height: 1.7em; }
@@ -78,23 +78,26 @@ a                   { text-decoration: none; }
 .ind_o              { font-family: Arial; font-size:24px; vertical-align:middle; text-align:center; font-weight:bold; background-color:#CCCCCC; height: 40px; }
 .wr_l               { font-family: Arial; font-size:24px; vertical-align:middle; text-align:left; background-color:#FFA; height: 50px; width: 600px}
 .wr_m               { font-family: Arial; font-size:24px; vertical-align:middle; text-align:center; background-color:#FFA; height: 50px;  width: 200px; }
+.wr_prl             { font-family: Arial; font-size:24px; vertical-align:middle; text-align:left; background-color:#FF0; height: 50px; }
+.wr_prm             { font-family: Arial; font-size:24px; vertical-align:middle; text-align:center; background-color:#FF0; height: 50px;  }
 /* moderator */
 .mod_kopf           { font-family: Verdana; font-size: 5vw; vertical-align:middle; text-align: center; background-color:#FFA; height:6vw; border:1px solid #000; border-radius: 10px; width: 33%; }
 .mod_n              { font-family: Verdana; font-size: 4.5vw; vertical-align: middle; text-align: left; color: #000000; background-color: #FFFFFF; height: 25px; }
-.mod_az             { font-family: Verdana; font-size: 4.5vw; vertical-align: middle; text-align: left; color: #000000; background-color: #F4B183; height: 25px; }
+.mod_az             { font-family: Verdana; font-size: 4.5vw; vertical-align: middle; text-align: left; color: #000000; background-color: #FF0; height: 25px; }
 .mod_nb             { font-family: Verdana; font-size: 4.5vw; vertical-align: middle; text-align: left; color: #55f; background-color: #FFFFFF; height: 25px; }
 .mod_ns             { font-family: Verdana; font-size: 4.5vw; vertical-align: middle; text-align: left; color: #fa6; background-color: #FFFFFF; height: 25px; }
 .mod_m              { font-family: Verdana; font-size: 4vw; vertical-align:middle; text-align:left; color:#000000; background-color:#FFFFFF; height:25px; padding-right:30px; }
-.mod_s              { font-family: Verdana; font-size: 4vw; vertical-align:middle; text-align:left; color:#000000; background-color:#FFFFFF; height:100px; }
-.mod_pkte           { font-family: Verdana; font-size: 4vw; padding-right: 20px; text-align: right; }
+.mod_s              { font-family: Verdana; font-size: 3.5vw; vertical-align:middle; text-align:left; color:#000000; background-color:#FFFFFF; height:100px; border-bottom-style: solid; border-bottom-width: 1px;}
+.mod_pkte           { font-family: Verdana; font-size: 3.5vw; padding-right: 20px; text-align: right;  border-bottom-style: solid; border-bottom-width: 1px; }
 .mod_mk             { font-family: Verdana; font-size: 3vw; vertical-align:middle; text-align:left; color:#000000; background-color:#FFFFFF; height:25px; padding-right:30px; }
 .mod_z              { font-family: Verdana; font-size: 4.5vw; vertical-align:middle; text-align:center; color:#000000; background-color:#FFFFFF; height:25px; }
-.mod_verein         { font-family: Verdana; font-size:4vw; vertical-align:middle; text-align:left; background-color:#FFA; height:50px; }
-.mod_paar           { font-family: Verdana; font-size:3vw; }
+.mod_verein         { font-family: Verdana; font-size: 4vw; vertical-align:middle; text-align:left; background-color:#FFA; height:50px; }
+.mod_paar           { font-family: Verdana; font-size: 3vw; }
 /*   Breitensport  */
-.bs_krit            { font-family:Arial; width:18px; height:25px; }
-.bs_head            { font-family:Arial; width:18px; height:25px; font-size:14px; }
-.bs_text            { font-family:Arial; width:450px; text-align:center; }
+.bs_krit            { font-family: Arial; width:18px; height:25px; }
+.bs_head            { font-family: Arial; width:18px; height:25px; font-size:14px; }
+.bs_text            { font-family: Arial; width:450px; text-align:center; }
+.bs_verw            { font-family: Arial; font-size: 14px; width: 90px; border: thin solid black; vertical-align: middle; text-align: center; border-radius: 5px; height: 50px }
 .bs_wert            { width:18px; height:18px; text-align:center; color:#000000; font-size:13px; border: 1px solid #000; border-radius: 5px; }
 .bs_sel             { width:18px; height:18px; text-align:center; color:#000000; font-size:13px; background-color:#0d0; border: 1px solid #000; border-radius: 5px;}
 .bs_mist            { width:18px; height:18px; text-align:center; color:#000000; font-size:13px; border: 1px solid #000; border-radius: 5px; }
